--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,10 @@
 PORT=
 NODE_ENV=
 
+# JWT options
+JWT_SECRET=
+JWT_EXPIRES=
+
 # Database conection with URL
 DATABASE_URL=
 
@@ -11,3 +15,21 @@ DB_HOST=
 DB_PW=
 DB_USER=
 DB_NAME=
+
+# Redis conection with URL
+REDIS_URL=
+
+# Redis conection whitout URL
+REDIS_PORT=
+REDIS_HOST=
+
+# Email Sendinblue info
+EMAIL_CONTACT=
+SENDINBLUE_API_KEY=
+
+# Default configs
+TOKEN_DIGITS=
+SYNC_TIME=
+NOTIF_SMS=
+NOTIF_PUSH=
+NOTIF_EMAIL=
